--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="João Vitor Victorio">
-    <meta name="description" content="Portifólio do Desenvolvedor">
+    <meta name="description" content="Portfólio do Desenvolvedor">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/j-logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/68c9cd8169.js" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header id="topo">
-        <h1>Portifólio João</h1>
+        <h1>Portfólio João</h1>
         
         <nav id="nav">
             <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
