--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="João Vitor Victorio">
     <meta name="description" content="Portfólio do Desenvolvedor">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/j-logo.png" type="image/x-icon">
+    <link rel="icon" href="img/j-logo2.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/68c9cd8169.js" crossorigin="anonymous"></script>
 
     <title>João Vitor Victorio</title>
