add-projeto-victorio-turismo

--- a/index.html
+++ b/index.html
@@ -84,13 +84,14 @@
         <div class="divisor">Scroll Down</div>
     </a>
     <section id="projetos">
-        <article class="em-breve"> 
-            <h2>Projeto <span>(Em Desenvolvimento)</span></h2>
-            <img src="img/em-breve.png" alt="Em Breve" class="zoom">
+        <article> 
+            <h2>Projeto - Victorio Turismo</h2>
+            <img src="./img/projeto-victorio-turismos1.png" alt="Turismos transportes" class="zoom">
             <p>
-                Aguarde - lançamento de um novo projeto!
+                Um projeto desenvolvido em aula com o objetivo de desenvolver 
+                um site utilizando HTML5, CSS3 e exercitando o flexbox.  
             </p>
-            <a href="#projetos">Link não disponível</a>
+            <a href="./victorio-turismos/index.html" target="_blank">Acessar projeto</a>
         </article>  
         <article class="em-breve"> 
             <h2>Projeto <span>(Em Desenvolvimento)</span></h2>
