update-victorio-turismo

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 Um projeto desenvolvido em aula com o objetivo de desenvolver 
                 um site utilizando HTML5, CSS3 e exercitando o flexbox.  
             </p>
-            <a href="./victorio-turismos/index.html" target="_blank">Acessar projeto</a>
+            <a href="./victorio-turismo/index.html" target="_blank">Acessar projeto</a>
         </article>  
         <article class="em-breve"> 
             <h2>Projeto <span>(Em Desenvolvimento)</span></h2>
