--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="inicio">
         <article class="primario">
             <p class="texto-apresentacao">
-                <span>Olá, me chamo</span>
+                <span>Olá, meu nome é:</span>
                 <strong>João Vitor Victorio</strong>
                 <span>&lt;Desenvolvedor front-end/&gt;<span>
                 <br>
@@ -85,13 +85,13 @@
     </a>
     <section id="projetos">
         <article> 
-            <h2>Projeto - Victorio Turismo</h2>
-            <img src="./img/projeto-victorio-turismos1.png" alt="Turismos transportes" class="zoom">
+            <h2><strong>Projeto - Victorio Turismo</strong></h2>
+            <img src="img/projeto-victorio-turismos1.png" alt="Turismos transportes" class="zoom">
             <p>
                 Um projeto desenvolvido em aula com o objetivo de desenvolver 
                 um site utilizando HTML5, CSS3 e exercitando o flexbox.  
             </p>
-            <a href="./victorio-turismo/index.html" target="_blank">Acessar projeto</a>
+            <a href="victorio-turismo/index.html" target="_blank">Acessar projeto</a>
         </article>  
         <article class="em-breve"> 
             <h2>Projeto <span>(Em Desenvolvimento)</span></h2>
