--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 programação.
               </p>
             <div class="area-botoes">
-                <a href="https://drive.google.com/uc?id=1K5vc-2rSXzEEnryVY8hvkLQpx-wQgnLM&export=download" class="botao-cv">
+                <a href="cv/cv_joão_vitor_victorio.pdf" class="botao-cv" download="cv_joão_vitor_victorio.pdf" type="application/pdf">
                     <i class="fa-solid fa-cloud-arrow-down"></i>
                     <div class="forcar-branco">Baixar CV</div>
                 </a>
