--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <i class="fa-solid fa-square-envelope"></i>
                     <div class="forcar-branco">Gmail</div>
                 </a>
-                <a href="https://linkedin.com/in/joão-vitor-victorio-0648a116b/" class="linkedin" target="_blank">
+                <a href="https://www.linkedin.com/in/joaovitorvictorio/" class="linkedin" target="_blank">
                     <i class="fa-brands fa-linkedin"></i>
                     <div class="forcar-branco">LinkedIn</div>
                 </a>
