--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p class="texto-apresentacao">
                 <span>Olá, meu nome é:</span>
                 <strong>João Vitor Victorio</strong>
-                <span>&lt;Desenvolvedor front-end/&gt;<span>
+                <span>&lt;Developer/&gt;<span>
                 <br>
             </p>
             <div class="area-botoes">
@@ -61,13 +61,7 @@
         <article class="primario ordenar-2">
             <h2>Sobre Mim:</h2>
             <p>
-                Sou formado em administração de empresas e atuo no setor de faturamento há 4 anos, mas sempre fui um amante 
-                da tecnologias, mas não fazia ideia das muitas coisas magníficas que ela poderia me proporcionar, então aos 
-                poucos fui explorando e aprimorando meus conhecimentos.<br>
-                Atualmente migrei meus estudos para desenvolvimento, cursando Análise e Desenvolvimento de Sistemas na Estácio 
-                e outros cursos em paralelo para fixar o conhecimento, futuramente pretendo fazer uma pós-graduação em Engenharia 
-                de Software, no momento meu foco principal é estudar e aprender novas ferramenta e linguagens de 
-                programação.
+                Sou formado Administração de Empresas e atualmente estou cursando Análise e Desenvolvimento de Sistemas na Estácio e outros cursos adicionais, com foco em qualidade de software e testes automatizados.
               </p>
             <div class="area-botoes">
                 <a href="cv/CV - João Vitor Victorio.pdf" class="botao-cv" download="CV - João Vitor Victorio.pdf" type="application/pdf">
